crates/roundhouse-provider/tests/snapshots/golden_google_genai__google_genai_single_turn_text_interactions.snap
---
source: crates/roundhouse-provider/tests/golden_google_genai.rs
expression: "enc(&req, EndpointMode::Interactions)"
---
{
  "input": [
    {
      "content": [
        {
          "text": "What is 2+2?",
          "type": "text"
        }
      ],
      "type": "user_input"
    }
  ],
  "model": "gemini-3.0-pro",
  "stream": true
}
