crates/roundhouse-provider/tests/snapshots/golden_google_genai__google_genai_thinking_content_block_generate_content.snap
---
source: crates/roundhouse-provider/tests/golden_google_genai.rs
expression: legacy_err.to_string()
---
google-genai codec does not encode Thinking blocks
